--- a/reviews.html
+++ b/reviews.html
@@ -4,7 +4,49 @@
 	{% include nav.html %}
 
 	<div class="container" id="top">
-		<h2>Reviews</h2>
-        <p>We'll post reviews of our apps here</p>
+		<h2>App Reviews</h2>
+		<div>
+			<div class="review-title">Loveleen Kaur <span class="review-subtitle">for Hindi</span></div>
+	    <image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<br/>
+			<p><strong>The best app for learning Hindi alphabets.</strong> Loved it. My little one loves swiping though the cards. The best features are the voice, smooth transitions and the phonetics in English for non-hindi speaking parents. I hope the developer comes up with more apps in other languages.</p>
+		</div>
+		<hr/>
+		<div>
+			<div class="review-title">Vikram Vummidi <span class="review-subtitle">for Punjabi</span></div>
+	    <image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<br/>
+			<p>Good app. Would be happier if there is an English version as well.</p>
+		</div>
+		<hr/>
+		<div>
+			<div class="review-title">Jasdeep Singh <span class="review-subtitle">for Punjabi</span></div>
+	    <image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<br/>
+			<p>This app is great for teaching basic punjabi... who ever made this app did a amazing thing and I would be more happy if you can make this app bigger and add more material.</p>
+		</div>
+		<hr/>
+		<div>
+			<div class="review-title">Sara Joshi<span class="review-subtitle">for Marathi</span></div>
+	    <image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star1.png"/>
+			<image class="star" src="files/star0.png"/>
+			<br/>
+			<p>Being a maharstrian I don't know Marathi so this app has helped me.</p>
+		</div>
 	</div>
 {% include footer.html %}
