--- a/download.html
+++ b/download.html
@@ -5,7 +5,7 @@
 
 	<div class="container" id="top">
 		<h2>Download</h2>
-		<ul class="applist">
+		<ul class="applist" style="text-align: center;">
 			<li><a href="https://play.google.com/store/apps/details?id=com.amaltaas.alphabet.hi" style="background-image: url(files/ic_launcher_hi.png)"/>Hindi</a></li>
 			<li><a href="https://play.google.com/store/apps/details?id=com.amaltaas.alphabet.mr" style="background-image: url(files/ic_launcher_mr.png)"/>Marathi</a></li>
 			<li><a href="https://play.google.com/store/apps/details?id=com.amaltaas.alphabet.hi" style="background-image: url(files/ic_launcher_pu.png)"/>Punjabi</a></li>
