--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		<ul class="applist">
 			<li><a href="https://play.google.com/store/apps/details?id=com.amaltaas.alphabet.hi" style="background-image: url(files/ic_launcher_hi.png)"/>Hindi</a></li>
 			<li><a href="https://play.google.com/store/apps/details?id=com.amaltaas.alphabet.mr" style="background-image: url(files/ic_launcher_mr.png)"/>Marathi</a></li>
-			<li><a href="https://play.google.com/store/apps/details?id=com.amaltaas.alphabet.hi" style="background-image: url(files/ic_launcher_pu.png)"/>Punjabi</a></li>
+			<li><a href="https://play.google.com/store/apps/details?id=com.amaltaas.alphabet.pu" style="background-image: url(files/ic_launcher_pu.png)"/>Punjabi</a></li>
 		</ul>
 		</div>
 	</div>
