--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 			<li><a href="https://play.google.com/store/apps/details?id=com.amaltaas.alphabet.pu" style="background-image: url(files/ic_launcher_pu.png)"/>Punjabi</a></li>
 		</ul>
 		</div>
+        <p>For additional chars, activity sheets and more, check the <a href="alphabet-resources.html">Resources</a> page</p>
 	</div>
 
 	<div class="container">
